# docker-boost-cmake-example

./: .gitignore  CMakeLists.txt  build.sh  dockerfile  readme.md  run.sh
src/: main.cpp
